Got the all method to work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,10 @@
 <ul>
 {{#each burgers}}
-    <li><b>ID Number:</b> {{id}}</li>
-    <li><b>Name:</b> {{name}}</li>
-    <li><b>Devoured:</b> {{devoured}}</li>
+    <li>
+        <b>ID Number:</b> {{id}}<br>
+        <b>Name:</b> {{burger_name}}<br>
+        <b>Devoured:</b> {{devoured}}
+    </li>
     <br>
 {{/each}}
 </ul>
