Got the database to update and go back to main page

--- a/views/single-entry.handlebars
+++ b/views/single-entry.handlebars
@@ -9,7 +9,7 @@
 <br>
 <form class="update-form">
     <div class="update-group">
-        <label for="updateName">New Name?</label>
+        <label for="">New Name?</label>
         <br>
         <input type="text" id="updateName" name="updateName" style="margin-top:0.5em;">
     </div>
@@ -21,5 +21,5 @@
         <input type="radio" name="updateDev" value="0"> Not Devoured!
     </div>
     <br>
-    <button type="submit" class="updateBtn" data-target="{{this.id}}">Update Burger</button>
+    <button type="button" class="change" data-target="{{this.id}}">Update Burger</button>
 </form>
